[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Misha Zharov <mishazharov1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
hex-literal = "0.3"
base64 = "0.12"
openssl = "0.10"
rand = "0.7"
num-bigint = { version = "0.3", features = ["rand"] }
num-traits = "0.2"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
md4 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.13"
